# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
memory/src/: button.py  level.py  pyproject.toml
src/: button.py  card.py  counter.py  deck.py  eventhandler.py  gameloop.py  item.py  level.py  main.py  menu.py  points.py  renderer.py  timer.py
src/memory/file_system/: save.py  test.csv
src/memory/game/: card.py  deck.py  level.py
src/memory/points_system/: counter.py  points.py  timer.py
src/memory/ui/: button.py  clock.py  eventhandler.py  gameloop.py  item.py  level_service.py  menu.py  renderer.py  ui.py
src/points_system/: counter.py  points.py
src/tests/: card_test.py  counter_test.py  deck_test.py  game_test.py  level_test.py  points_test.py  save_test.py  timer_test.py
src/tests/game/: card_test.py  deck_test.py  level_test.py
src/tests/points/: counter_test.py  points_test.py  timer_test.py
src/ui/: button.py  clock.py  eventhandler.py  gameloop.py  item.py  menu.py  renderer.py
