[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Natalie Johansson <mnrjohansson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
unittest = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
